--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
   background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.App h2 {
+  grid-column: 1/3;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App div {
+  border: 1px solid #cccccc;
+  border-radius: 10px;
+  width: 90%;
+  height: 30vh;
+  margin: 0.5rem auto;
+  padding: 1rem;
+  display: grid;
+  grid-template-columns: 50%;
+  justify-content: center;
+  gap: 1rem;
 }
